--- a/style.css
+++ b/style.css
@@ -1,19 +1,17 @@
-
-body{
+.content{
+    width: 100vw;
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: beige;
 }
 
-.content{
-    
-}
 .img-section{
-    height: 100%;
+    height: 100vh;
     min-width: 225px;
+    width: 25vw;
     background-repeat: no-repeat;
     background-image: url(https://static.wikia.nocookie.net/guilty-gear/images/9/90/12-Dimensional_Flux_Observatory_2.png/revision/latest?cb=20210731204724);
-    background-size: cover;
     display: flex;
     position: relative;
     align-items: center;
@@ -26,9 +24,52 @@ body{
     height: 150px;
     padding: 2rem;
     width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .odin-img{
     overflow: clip;
     max-height: 100%;
+}
+
+h1{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 2em;
+    font-weight: bold;
+}
+
+.form-section{
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: center;
+    padding: 0px 2em;
+}
+
+.details-section{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: white;
+}
+
+form{
+    display: flex;
+    flex-flow: row wrap;
+    width: 60vw;
+    gap: 1rem;
+}
+
+label {
+    position: relative;
+    width: 15rem;
+}
+
+input {
+    border: 1px solid rgb(224,224,224);
+    border-radius: 3px;
+    padding: 2px 5px;
+    margin-top: 2px;
 }
