--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: beige;
+    background-color: rgb(248, 201, 201);
 }
 
 .img-section{
