--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: rgb(248, 201, 201);
+    background-color: rgb(252, 223, 223);
 }
 
 .img-section{
@@ -11,11 +11,12 @@
     min-width: 225px;
     width: 25vw;
     background-repeat: no-repeat;
-    background-image: url(https://static.wikia.nocookie.net/guilty-gear/images/9/90/12-Dimensional_Flux_Observatory_2.png/revision/latest?cb=20210731204724);
+    background-image: url(img/12-Dimensional_Flux_Observatory_2.png);
     display: flex;
     position: relative;
     align-items: center;
     justify-content: center;
+    flex-grow: 1;
 }
 
 .logo-section{
@@ -72,4 +73,18 @@ input {
     border-radius: 3px;
     padding: 2px 5px;
     margin-top: 2px;
+}
+
+input:focus {
+    border: none;
+    outline: none;
+    box-shadow: 4px 4px 5px rgba(0,0,0,0.25);
+}
+
+input:focus:invalid {
+    border: 2px solid red;
+}
+
+input:focus:valid {
+    border: 2px solid blue;
 }
