--- a/style.css
+++ b/style.css
@@ -1,4 +1,13 @@
-.content{
+@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
+
+html {
+    font-family:'Quicksand', sans-serif;
+    font-size: 1.2em;
+    font-weight: bold;
+}
+
+
+.content {
     width: 100vw;
     display: flex;
     align-items: center;
@@ -6,7 +15,7 @@
     background-color: rgb(252, 223, 223);
 }
 
-.img-section{
+.img-section {
     height: 100vh;
     min-width: 225px;
     width: 25vw;
@@ -19,7 +28,7 @@
     flex-grow: 1;
 }
 
-.logo-section{
+.logo-section {
     background-color: rgba(0,0,0,0.5);
     color: white;
     height: 150px;
@@ -30,33 +39,49 @@
     align-items: center;
 }
 
-.odin-img{
+.odin-img {
     overflow: clip;
     max-height: 100%;
 }
 
-h1{
+h1 {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 2em;
     font-weight: bold;
 }
 
-.form-section{
+.form-section {
     display: flex;
     flex-direction: column;
     align-items: start;
     justify-content: center;
-    padding: 0px 2em;
+    padding: 1rem;
 }
-
-.details-section{
+.details-section {
     display: flex;
     flex-direction: column;
     justify-content: center;
     background-color: white;
+    padding: 1.2rem 2vw 3rem 2vw;
+    box-shadow: 0px 5px 5px rgba(0,0,0,0.25);
+    font-weight: normal;
 }
 
-form{
+.submit-section {
+    margin-top: 2rem;
+}
+
+button {
+    border-radius: 5px;
+    border: none;
+    box-shadow: 1px 2px 5px rgba(0,0,0,0.25);
+    padding: 0.8rem 1.3rem;
+    color: white;
+    background-color:rgb(81, 81, 233);
+    font-family:'Quicksand', sans-serif;
+}
+
+form { 
     display: flex;
     flex-flow: row wrap;
     width: 60vw;
