--- a/style.css
+++ b/style.css
@@ -39,6 +39,13 @@ html {
     align-items: center;
 }
 
+.img-section p {
+    position: absolute;
+    bottom: 0px;
+    right: 3.5px;
+    color:rgba(0, 0, 0, 0.55);
+}
+
 .odin-img {
     overflow: clip;
     max-height: 100%;
@@ -99,6 +106,7 @@ input {
     border-radius: 3px;
     padding: 2px 5px;
     margin-top: 2px;
+    font-size: 0.8em;
 }
 
 input:focus {
